--- a/index.html
+++ b/index.html
@@ -31,41 +31,46 @@
 <fieldset>
 
     <legend>Contact Information</legend>
-  <div>
-    <label for="fullname">Full Name</label>
-    <br>
-    <input id="fullname" name="fullname" type="text" placeholder="  Required">
+  <div class="desktop_content">
+    <label class="label_desktop" for="fullname">Full Name</label>
+
+    <input class="input_desktop" id="fullname" name="fullname" type="text" placeholder="  Required">
   </div>
+
   <div>
-    <label for="email">Email Address</label>
-    <br>
+    <label  class="label_desktop" for="email">Email Address</label>
+
     <input id="email" name="email" type="text" placeholder="  Required">
   </div>
   <div>
-    <label for="mobile_phone">Mobile Number</label>
-    <br>
+
+    <label class="label_desktop" for="mobile_phone">Mobile Number</label>
+
     <input id="mobile_phone" name="mobile phone" type="text" placeholder="  (111) 111-1111">
   </div>
+
   <div>
-    <label for="home_phone">Home Number</label>
-    <br>
+    <label class="label_desktop" for="home_phone">Home Number</label>
+
     <input id="home_phone" name="home phone" type="text" placeholder="  (111) 111-1111">
   </div>
+
   <div>
-    <label for="street_address">Street Address</label>
-    <br>
+    <label class="label_desktop" for="street_address">Street Address</label>
+
     <input id="street_address" name="street address" type="text">
   </div>
+
   <div>
-    <label for="city">City</label>
-    <br>
+    <label class="label_desktop" for="city">City</label>
+
     <input id="city" name="city" type="text">
   </div>
 
   <!-- STATE SELECT -->
   <div>
-    <label for="state">State</label>
-    <br>
+    <label class="label_desktop" for="state">State</label>
+
     <select id="state" name="state">
       <option value="default" selected>Choose State</option>
       <option value="AL">Alabama</option>
@@ -123,8 +128,8 @@
   </div>
 
   <div>
-    <label for="zipcode">Zip Code</label>
-    <br>
+    <label class="label_desktop" for="zipcode">Zip Code</label>
+    
     <input id="zipcode" name="contact-info" type="text">
   </div>
 </fieldset>
